# e-Hanoi-Back

./: .gitignore  Cargo.toml  Procfile  README.md  diesel.toml
.circleci/: config.yml
graphql/: Cargo.toml
graphql/schema/: schema.graphql
graphql/src/: lib.rs
graphql/src/auth/: mod.rs
graphql/src/db/: mod.rs  schema.rs
graphql/src/db/scores/: loader.rs  mod.rs  repository.rs
graphql/src/db/users/: loader.rs  mod.rs  repository.rs
graphql/src/resolvers/: mod.rs  root.rs  score.rs  user.rs
graphql/src/schemas/: mod.rs  root.rs  score.rs  user.rs
migrations/2022-04-13-154904_users/: down.sql  up.sql
src/: main.rs
src/tests/: mod.rs
src/tests/score/: create_score.rs  delete_score.rs  get_my_best_score.rs  mod.rs  query.graphql  ranking_score.rs
src/tests/user/: create_user_in_db.rs  create_user_on_db.rs  delete_user_in_db.rs  delete_user_on_db.rs  get_user.rs  list_user.rs  mod.rs  query.graphql
