[package]
name = "e-hanoi-back"
version = "0.1.0"
authors = ["Lastronauts <lastronauts@outlook.jp>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.0"
actix-rt = "2.6.0"
actix-web = "4.0.1"
anyhow = "1.0.55"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
firestore-db-and-auth = "0.6.1"
graphql = { path = "./graphql" }
graphql_client = "0.10.0"
reqwest = { version = "0.11.9", features = ["json"] }
serde = "1.0.136"

[workspace]
members = ["graphql"]

[profile.release]
opt-level = "z"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false
